--- a/test/fixtures/tasks.yml
+++ b/test/fixtures/tasks.yml
@@ -2,16 +2,10 @@
 
 one:
   title: MyString
-  string: MyString
-  details: MyString
-  text: MyString
-  completed: MyString
-  'false': MyString
+  details: MyText
+  completed: false
 
 two:
   title: MyString
-  string: MyString
-  details: MyString
-  text: MyString
-  completed: MyString
-  'false': MyString
+  details: MyText
+  completed: false
